CKAD/Services & Networking/Ingress Networking/Ingress Resources/ingress-wear-watch-domain.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingress-wear
spec:
  rules:
  - host: wear.my-online-store.com
    http:
      paths:
      - backend:
          service:
            name: wear-service
            port:
              number: 80
        path: /
        pathType: Exact
  - host: watch.my-online-store.com
    http:
      paths:
      - backend:
          service:
            name: watch-service
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
